--- a/AnimalsPalace2/src/main/java/View/TelaPets.form
+++ b/AnimalsPalace2/src/main/java/View/TelaPets.form
@@ -92,13 +92,16 @@
               <Font name="Tahoma" size="18" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="6" rowCount="0">
+              <Table columnCount="9" rowCount="0">
                 <Column editable="false" title="ID" type="java.lang.String"/>
                 <Column editable="false" title="Nome" type="java.lang.String"/>
                 <Column editable="false" title="Esp&#xe9;cie" type="java.lang.String"/>
                 <Column editable="false" title="Ra&#xe7;a" type="java.lang.String"/>
                 <Column editable="false" title="Sexo" type="java.lang.String"/>
                 <Column editable="false" title="Dono" type="java.lang.String"/>
+                <Column editable="false" title="Doen&#xe7;a" type="java.lang.String"/>
+                <Column editable="false" title="Castrado" type="java.lang.String"/>
+                <Column editable="false" title="Dt Nasc." type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
